feat: remade jwt service